--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <form class="primer-formulario">
             <label for="InputCuadrado">
                 <h3>Perímetro</h3>
-                <span>Lado del cuadrado: </span>
+                <span>Escribe lado del cuadrado: </span>
             </label>
             <input id="InputCuadrado" type="number" />
             <br />
@@ -40,7 +40,7 @@
             </button>
             <label for="InputCuadradoArea">
                 <h3>Área</h3>
-                <span>Lado del cuadrado:</span>
+                <span>Escribe lado del cuadrado:</span>
             </label>
             <input id="InputCuadradoArea" type="number" />
             <button class="btn-1" type="button" onclick="calcularAreaCuadrado()">
@@ -54,15 +54,15 @@
         <form class="segundo-formulario">
             <h3>Perímetro</h3>
             <label for="lado1Triangulo">
-                <span>Lado 1: </span>
+                <span>Escribe lado 1: </span>
             </label>
             <input id="lado1Triangulo" type="number" /><br />
             <label for="lado2Triangulo">
-                <span>Lado 2:</span>
+                <span>Escribe lado 2:</span>
             </label>
             <input id="lado2Triangulo" type="number" /><br />
             <label for="baseTriangulo">
-                <span>Base :</span>
+                <span>Escribe la base :</span>
             </label>
             <input id="baseTriangulo" type="number" /><br />
             <button type="button" onclick="calcularPerimetroTriangulo()">
@@ -72,11 +72,11 @@
 
             <h3>Área</h3>
             <label for="alturaTriangulo">
-                <span>Altura:</span>
+                <span>Escribe la altura:</span>
             </label>
             <input id="alturaTriangulo" type="number" /><br />
             <label for="baseTriangulo2">
-                <span>Base:</span>
+                <span>Escribe la base:</span>
             </label>
             <input id="baseTriangulo2" type="number" /><br />
             <button type="button" onclick="calcularAreaTriangulo()">
