refactor: corrección cálculo triángulo Isosceles

--- a/isoseles.html
+++ b/isoseles.html
@@ -29,15 +29,16 @@
             Cálculos del triángulo Isósceles
         </h2>
         <form class="primer-formulario">
-            <label for="InputIsosceles">
-                <h3>Perímetro</h3>
+            <h3>Perímetro</h3>
+            <label for="ladoATrianguloPerimetro">
                 <span>Escribe lado : </span>
             </label>
-            <input id="ladoATriangulo" type="number" />
-            <label for="ladoBTriangulo">
+            <input id="ladoATrianguloPerimetro" type="number" />
+
+            <label for="baseTrianguloPerimetro">
                 <span>Escribe la base :</span>
             </label>
-            <input id="ladoBTriangulo" type="number" />
+            <input id="baseTrianguloPerimetro" type="number" />
             <br />
             <button class="btn-1" type="button" onclick="calcularPerimetroIsosceles()">
                 Calcular el perímetro
@@ -46,15 +47,16 @@
         <br />
         <hr />
         <form class="segundo-formulario">
-            <label for="InputIsoscelesArea">
-                <h3>Área</h3>
+            <h3>Área</h3>
+            <label for="alturaTrianguloArea">
                 <span>Escribe altura el triángulo:</span>
             </label>
-            <input id="alturaTriangulo" type="number" />
-            <label for="baseTriangulo2">
+            <input id="alturaTrianguloArea" type="number" />
+
+            <label for="baseTrianguloArea">
                 <span>Escribe la base del triángulo:</span>
             </label>
-            <input id="baseTriangulo2" type="number" />
+            <input id="baseTrianguloArea" type="number" />
             <button class="btn-1" type="button" onclick="calcularAreaIsosceles()">
                 Calcular el área
             </button>
@@ -62,15 +64,16 @@
         <br />
         <hr />
         <form class="tercer-formulario">
-            <label for="InputIsosceles">
-                <h3>Altura</h3>
-                <span>Escribe altura del triángulo: </span>
+            <h3>Altura</h3>
+            <label for="ladoATrianguloAltura">
+                <span>Escribe lado A del triángulo: </span>
             </label>
-            <input id="ladoATriangulo" type="number" />
-            <label for="ladoBTriangulo">
-                <span>Escribe lado del triángulo: </span>
+            <input id="ladoATrianguloAltura" type="number" />
+
+            <label for="baseTrianguloAltura">
+                <span>Escribe la Base del triángulo: </span>
             </label>
-            <input id="ladoBTriangulo" type="number" />
+            <input id="baseTrianguloAltura" type="number" />
             <br />
             <button class="btn-1" type="button" onclick="calcularAlturaIsosceles()">
                 Calcular la Altura
